# gemm_tiling_performance

./: CMakeLists.txt  README.md
apps/: gemm_disk.omp.cpp  gemm_dram.cpp  gemm_dram.omp.cpp  gemm_dram.omp.v2.command_option.cpp  gemm_dram.tile_size.omp.cpp  gemm_dram.tile_size.omp.v2.command_option.cpp  gemm_rapid.cpp  gemm_rapid.omp.cpp  gemm_rapid.omp.v2.command_option.cpp  gemm_rapid.tile_size.omp.cpp  gemm_rapid.tile_size.omp.v2.command_option.cpp  gemm_rapid.tile_size.seq.cpp  gemm_rapid.v2.inorder.cpp  gemm_rapid.v3.inorder.cpp  gemm_test_correct.cpp
include/: gemm.h
local_stuff/gemm/: run00.gemm.sh  run01.rapid.v2.inorder.sh  run02.rapid.v3.inorder.sh  run03.gemm.omp.sh  run04.gemm.mix.sh
local_stuff/gemm_perf/: py00.perf_event.py  run00.gemm.omp.tile_size.perf_events.sh  run01.gemm.omp.tile_size.perf_events.threads-32-56.sh
local_stuff/pg01_perf_gemm_dram-fam_omp/: py00.perf_event.py  run00.gemm.omp.dram-fam.perf_events.sh
local_stuff/pg02_gemm_disk_omp/: run00.gemm.disk.omp.sh
src/: gemm.cpp
